--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,29 +23,24 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.6.0
-    - name: Install
-      run: npm i
-    - name: Build
-      run: npm run build
-  # Single deploy job since we're just deploying
-  deploy:
-    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'dist/'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3.6.0
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install
+      run: npm ci
+    - name: Build
+      run: npm run build
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: 'dist/'
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v1
